[package]
name = "dev-tool"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-open", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
grok = { version = "2.0.0" }
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
lance = "0.10"
datafusion = "37.1.0"
arrow = "51"
arrow-json = "51.0.0"
futures-util = "0.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
